# semantic-cache

./: README.md  pyproject.toml
semantic_cache/: __init__.py  cache.py  embeddings.py  schema.sql
tests/: test_cache.py
